vercre-holder/tests/snapshots/presentation_2__credentials_requested.snap
---
source: vercre-holder/tests/presentation_2.rs
assertion_line: 184
expression: credentials
snapshot_kind: text
---
- id: "https://example.com/credentials/3732"
  issuer: "https://vercre.io"
  issuer_name: Vercre
  issued: "[issued]"
  type:
    - EmployeeIDCredential
    - VerifiableCredential
  format: jwt_vc_json
  claim_definitions:
    employeeId:
      mandatory: true
      value_type: string
      display:
        - name: Employee ID
  subject_claims:
    - claims:
        employeeId: "1234567890"
      id: "did:example:ebfeb1f712ebc6f1c276e12ec21"
  issuance_date: "[issuance_date]"
  valid_from: "2023-11-20T23:21:55Z"
  valid_until: "2033-12-20T23:21:55Z"
