vercre-holder/tests/snapshots/presentation_2__response_response.snap
---
source: vercre-holder/tests/presentation_2.rs
assertion_line: 229
expression: response
snapshot_kind: text
---
redirect_uri: "http://localhost:3000/cb"
response_code: ~
