vercre-holder/tests/snapshots/presentation_2__response_response_obj.snap
---
source: vercre-holder/tests/presentation_2.rs
assertion_line: 309
expression: response
snapshot_kind: text
---
redirect_uri: "http://localhost:3000/cb"
response_code: ~
